--- a/Demo/InfiniteMenuDemo/src/styles.css
+++ b/Demo/InfiniteMenuDemo/src/styles.css
@@ -1,17 +1,22 @@
+@import "../src/InfiniteMenu/Css/InfiniteMenu.css";
+
 /* You can add global styles to this file, and also import other style files */
 
-/* width */
+body {
+    font-family: 'Rubik';
+    background-color: #001528;
+    margin: 0px;
+}
+
 ::-webkit-scrollbar {
     width: 5px;
     height: 5px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
     background: #f1f1f1;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
     background: rgb(5, 63, 118);
 }
