--- a/Demo/InfiniteMenuDemo/src/InfiniteMenu/infinite-menu.component.html
+++ b/Demo/InfiniteMenuDemo/src/InfiniteMenu/infinite-menu.component.html
@@ -16,8 +16,9 @@
         [ShowOpenForAll]="ShowOpenForAll"
         [IconHeight]="IconHeight"
         [IconWidth]="IconWidth"
-        [MenuColors]="MenuColors"
+        [MenuStyles]="MenuStyles"
         [ShowOnlyIcon]="ShowOnlyIcon"
+        [SingleMenuHeight]="SingleMenuHeight"
         (MenuSelected)="_MenuSelected($event)"
         (MenuOpenCloseChanged)="_MenuOpenCloseChanged($event)"
     ></menu-item>
