--- a/Demo/InfiniteMenuDemo/src/app/app.component.html
+++ b/Demo/InfiniteMenuDemo/src/app/app.component.html
@@ -4,12 +4,12 @@
       [(MenuModel)]="data" 
       [RGB]="RGB_DATA" 
       [ShadeMultiplier]="2" 
-      [ShowOpenForAll]="false"
+      [ShowOpenForAll]="true"
       (MenuSelected)="_MenuSelected($event)"
       (MenuOpenCloseChanged)="_MenuOpenCloseChanged($event)"
       [IconHeight]="'25px'"
       [IconWidth]="'25px'"
-      [MenuColors]="MenuColors"
+      [MenuStyles]="MenuStyles"
       [Loading]="false"
       [ShowOnlyIcon]="false"
     ></infinite-menu>
