--- a/Demo/InfiniteMenuDemo/src/app/app.component.css
+++ b/Demo/InfiniteMenuDemo/src/app/app.component.css
@@ -1,8 +1,79 @@
-.InfiniteMenuInnerContainer{
-    height: 700px; 
-    width: 300px; 
-    color: white; 
-    background-color: rgb(235, 235, 235); 
-    max-width: 90vw;
-    max-height: 90vh;
+.InfiniteMenuInnerContainer {
+  width: 300px;
+  color: white;
+  background-color: #001528;
+  max-width: 90vw;
+  height: calc(100vh - 60px);
+  transition: all 0.3s ease-in-out;
+}
+
+.nav-bar-container {
+  background-color: #001528;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 30px;
+  color: white;
+}
+
+.HeaderContianer{
+    flex-grow: 1;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.MenuIconContainer {
+  padding: 0px 10px;
+  cursor: pointer;
+  max-width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ContentContainer {
+  background-color: #f0f2f5;
+  width: calc(100% - (300px + 15px + 15px));
+  height: calc(100vh - (60px + 15px + 15px));
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+}
+
+.ContentContainer .Content {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+
+.MenuIconInnerContainer{
+    display: none;
+    width: 100%;
+    height: 100%;
+}
+
+@media only screen and (max-width: 1000px) {
+  .InfiniteMenuInnerContainer {
+    position: fixed;
+    left: -300px;
+    bottom: 0px;
+  }
+
+  .InfiniteMenuInnerContainer.open{
+    left: 0px;
+  }
+
+  .ContentContainer {
+    width: calc(100% - (5px + 5px));
+    padding: 5px;
+  }
+
+  .MenuIconInnerContainer{
+    display: block;
+  }
 }
